@@ -5,7 +5,9 @@
 	app/menubar.c, app/midi-09x.c, app/module-info.c,
 	app/sample-editor.c, app/track-editor.c, app/transposition.c,
 	app/xm-player.c, app/xm.h: The usage of xm_set_modified() function
-	is optimized.
+	is optimized;
+	* app/gui.c: In gui_update_title() title is now updated in idle mode
+	to reduce CPU overhead.
 
 2018-09-18  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/audioconfig.c, app/gui-settings.c, app/gui-subs.h,
